# mujoco_tutorial

./: README.md
models/custom/: hello.xml  hopper.xml  pendulum.xml
models/robots/: README.md
models/robots/agility_cassie/: cassie.xml  scene.xml
template/: main.py  robot.py  sim.py
template_cpp/: CMakeLists.txt  README.md  how_to_write_CMakeLists.md
template_cpp/include/: test.hpp
template_cpp/src/: main.cpp  test.cpp
